# face_recognition

./: .gitignore  CMakeLists.txt  FaceRecognition.pro  backgroundknncropper.cpp  backgroundknncropper.h  backgroundsegmentation.cpp  backgroundsegmentation.h  bibliography.bib  callgrind.out.6368  camera_info.yaml  clusterofimages.cpp  clusterofimages.h  covariance_test.h  experiment.sh  face.cpp  face.h  facecropper.cpp  facecropper.h  faceloader.cpp  faceloader.h  facerecognitionUML  filter.h  image4dclustercomposite.cpp  image4dclustercomposite.h  image4dsetcomponent.h  imageloader.cpp  imageloader.hpp  imageset.h  kmeansbackgroundremover.cpp  kmeansbackgroundremover.h  lbp.h  main.cpp  map.txt  pointprojector.cpp  pointprojector.h  poseclusterizer.cpp  poseclusterizer.h  preprocessorpipe.cpp  preprocessorpipe.h  report.tex  (+11 more)
bouml/: 128002  128002.bodies  128002.diagram  128130  128130.bodies  128130.diagram  128258  128258.bodies  128386  128386.bodies  128514  128514.bodies  128642  128642.bodies  128770  128898  128898.bodies  129026  129154.bodies  129282.bodies  129666.bodies  129794.bodies  129922.bodies  130050.bodies  130306.bodies  130434.bodies  130562.bodies  130690.bodies  131202.bodies  131330.bodies  131586.bodies  131714.bodies  131842.bodies  2.session  bouml.prj  stereotypes
head_pose_estimation/: main.cpp
include/: backgroundsegmentation.h  covariance_test.h  covariancecomputer.h  datasetcov.h  datasetwriter.h  face.h  facecropper.h  facerecognizer.h  facesegmenter.h  filter.h  image4d.h  image4dcomponent.h  image4dleaf.h  image4dloader.h  lbp.h  (+18 more)
(+35 files in other folders)
